[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-ai-agent"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
description = "An AI coding agent that can inspect, reason about, and modify your codebase."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core",
    "langgraph",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "typer[all]",
    "rich",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
